[gd_scene load_steps=9 format=3 uid="uid://c2eu7itoqcjsb"]

[ext_resource type="Script" path="res://Scenes/start_menu.gd" id="1_eniqs"]
[ext_resource type="Texture2D" uid="uid://7rp05ria16ac" path="res://Assets/UI/Buttons/Button_Blue_3Slides.png" id="2_fwejq"]
[ext_resource type="Texture2D" uid="uid://cumy3sao4o5d2" path="res://Assets/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="3_s268c"]
[ext_resource type="Texture2D" uid="uid://dw2ibsbymij0w" path="res://Assets/UI/Buttons/Button_Hover_3Slides.png" id="4_emih1"]
[ext_resource type="FontFile" uid="uid://dk2rsye3q5go7" path="res://Assets/Peaberry-Font-v2.0/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Base/Peaberry-Base.otf" id="5_cb3ny"]
[ext_resource type="Texture2D" uid="uid://xegacxoa4lib" path="res://Assets/TileSets/broomservicestartmenu.png" id="6_58yyu"]

[sub_resource type="Theme" id="Theme_vkg3a"]

[sub_resource type="Theme" id="Theme_ox203"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eniqs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 573.415
offset_top = 311.775
offset_right = 765.415
offset_bottom = 443.775
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(8.79, 0)
layout_mode = 2

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer"]
z_index = 4
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_vkg3a")
texture_normal = ExtResource("2_fwejq")
texture_pressed = ExtResource("3_s268c")
texture_hover = ExtResource("4_emih1")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Start"]
texture_filter = 1
layout_mode = 0
offset_left = 39.0
offset_top = 12.0
offset_right = 159.0
offset_bottom = 52.0
theme = SubResource("Theme_ox203")
theme_override_colors/font_color = Color(0.193382, 0.242021, 0.357233, 1)
theme_override_fonts/font = ExtResource("5_cb3ny")
theme_override_font_sizes/font_size = 30
text = "START"
horizontal_alignment = 1

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
z_index = 5
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_fwejq")
texture_pressed = ExtResource("3_s268c")
texture_hover = ExtResource("4_emih1")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Quit"]
texture_filter = 1
layout_mode = 0
offset_left = 37.0
offset_top = 12.0
offset_right = 157.0
offset_bottom = 52.0
theme = SubResource("Theme_ox203")
theme_override_colors/font_color = Color(0.193382, 0.242021, 0.357233, 1)
theme_override_fonts/font = ExtResource("5_cb3ny")
theme_override_font_sizes/font_size = 30
text = "Quit"
horizontal_alignment = 1

[node name="Menu" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
position = Vector2(502, 327)
scale = Vector2(1.78499, 1.78499)
texture = ExtResource("6_58yyu")

[connection signal="button_down" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
